TestRepo2/src/objects/Budget__c.object
<CustomObject>
    <description>POS Project: object that represents an estimate of expenditure for a given brand, order window and shopper</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets_Created</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budgeter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budgeter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Created_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Off-premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Allocation_Quantity__c</fullName>
        <label>Item Allocation Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Spent_Amount__c</fullName>
        <label>My Spent Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Spent_Item_Quantity__c</fullName>
        <label>My Spent Item Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Spent_Overage__c</fullName>
        <label>My Spent Overage</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Window__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Window</label>
        <referenceTo>Order_Window__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizational_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizational Unit</label>
        <referenceTo>Organizational_Unit__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount__c</fullName>
        <formula>Unallocated_Amount__c - My_Spent_Amount__c - MAX(Spent_Amount__c-Sub_Allocated_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Item_Quantity__c</fullName>
        <formula>Unallocated_Item_Quantity__c - My_Spent_Item_Quantity__c - MAX(Spent_Item_Quantity__c-Sub_Allocated_Item_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spent_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spent Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spent_Item_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spent Item Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Allocated_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sub-Allocated Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Allocated_Item_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sub-Allocated Item Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unallocated_Amount__c</fullName>
        <formula>Amount__c - Sub_Allocated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unallocated_Item_Quantity__c</fullName>
        <formula>Item_Allocation_Quantity__c - Sub_Allocated_Item_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>Channel__c</columns>
        <columns>Organizational_Unit__c</columns>
        <columns>Order_Window__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BDG-{0000000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>